<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".MyJobsFragment">

    <EditText
        android:id="@+id/clientEdit"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edt_background"
        android:hint="@string/vehOwner"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <EditText
        android:id="@+id/regEdit"
        android:layout_width="200sp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/clientEdit"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/vehReg"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <TextView
        android:id="@+id/spinnerdevTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/regEdit"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-30dp"
        android:text="@string/spinnerDevtype"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/devTypeSpinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/spinnerdevTitle"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/style_spinner">

    </Spinner>

    <EditText
        android:id="@+id/devSerial"
        android:layout_width="200sp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/devTypeSpinner"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/devSerial"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>
    <EditText 
    android:id="@+id/simnumber"
    android:layout_width="200sp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/devSerial"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/simnumber"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        </EditText>

    <TextView
        android:id="@+id/spinnerInstTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/simnumber"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-31dp"
        android:text="@string/spinnerInsttype"
        android:textColor="@color/black"
        android:textSize="15sp">

    </TextView>

    <Spinner
        android:id="@+id/instTypeSpinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/spinnerInstTitle"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/style_spinner">

    </Spinner>


</RelativeLayout>